--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Welcome to the movie archives
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <!--Buttons to navigate the various pages-->
+  <ion-button [routerLink]="['/movie']">Go to 'Star Wars' Page</ion-button>
+  <ion-button [routerLink]="['/movie1']">Go to 'The Lord of the Rings' Page</ion-button>
+  <ion-button [routerLink]="['/movie2']">Go to 'Back to the Future' Page</ion-button>
+
 </ion-content>
